--- a/main.tex
+++ b/main.tex
@@ -774,14 +774,16 @@ The numerator in Equation \ref{eq:ap} is the cardinality of the set of
 
 \subsubsection{Choice of LLM:}
 % Choice of LLM
-We conduct experiments using four LLMs: OpenAI's GPT-4o
+We conduct experiments using four instruction-tuned LLMs: OpenAI's GPT-4o
 \cite{openai2024HelloGpt4o}, OpenAI's o1-preview
 \cite{openai2024IntroducingOpenaiO1}, Meta's Llama3-8B
 \cite{grattafiori2024Llama} and DeepSeek's R1-Distil-Llama-8B
 \cite{guo2025DeepSeek}.
 % Reasoning vs. Conventional LLMs Closed-source vs. Open-source
-Our selection involves two larger closed-source models (GPT-4o and o1-preview)
-and two smaller open-source models (Llama3-8B and R1-Distil-Llama-8B) with two
+
+Our selection involves two larger commerical models (GPT-4o and o1-preview)
+and two smaller open-source models (Llama3-8B and R1-Distil-Llama-8B). GPT-4o
+and Llama3-8B are general LLMstwo
 of the selected models being reasoning LLMs (o1-preview and
 R1-Distil-Llama-8B).
 
