--- a/main.tex
+++ b/main.tex
@@ -781,8 +781,8 @@ We conduct experiments using four instruction-tuned LLMs: OpenAI's GPT-4o
 \cite{guo2025DeepSeek}.
 % Reasoning vs. Conventional LLMs Closed-source vs. Open-source
 
-Our selection involves two larger commerical models (GPT-4o and o1-preview)
-and two smaller open-source models (Llama3-8B and R1-Distil-Llama-8B). GPT-4o
+Our selection involves two larger commerical models: GPT-4o and o1-preview
+and two smaller open-source models: Llama3-8B and R1-Distil-Llama-8B. GPT-4o
 and Llama3-8B are general LLMstwo
 of the selected models being reasoning LLMs (o1-preview and
 R1-Distil-Llama-8B).
