--- a/main.tex
+++ b/main.tex
@@ -777,7 +777,7 @@ The numerator in Equation \ref{eq:ap} is the cardinality of the set of
 We conduct experiments using four instruction-tuned LLMs: OpenAI's GPT-4o
 \cite{openai2024HelloGpt4o}, OpenAI's o1-preview
 \cite{openai2024IntroducingOpenaiO1}, Meta's Llama3-8B
-\cite{grattafiori2024Llama} and DeepSeek's R1-Distil-Llama-8B
+\cite{dubey2024Llama3Herd} and DeepSeek's R1-Distil-Llama-8B
 \cite{guo2025DeepSeek}.
 % Reasoning vs. Conventional LLMs Closed-source vs. Open-source
 Our selection involves two larger commerical models: GPT-4o and o1-preview and
