--- a/main.tex
+++ b/main.tex
@@ -778,7 +778,7 @@ We conduct experiments using four instruction-tuned LLMs: OpenAI's GPT-4o
 \cite{openai2024HelloGpt4o}, OpenAI's o1-preview
 \cite{openai2024IntroducingOpenaiO1}, Meta's Llama3-8B
 \cite{dubey2024Llama3Herd} and DeepSeek's R1-Distil-Llama-8B
-\cite{guo2025DeepSeek}.
+\cite{deepseekai2025DeepseekR1Incentivizing}.
 % Reasoning vs. Conventional LLMs Closed-source vs. Open-source
 Our selection involves two larger commerical models: GPT-4o and o1-preview and
 two smaller open-source models: Llama3-8B and R1-Distil-Llama-8B. GPT-4o and
