--- a/main.tex
+++ b/main.tex
@@ -787,7 +787,7 @@ reasoning-specific LLMs.
 
 % Prompting strategy
 \subsubsection{Prompting approach:}
-To investigate the effect of different prompting strategies, we perform
+To investigate the effect of different prompting approaches, we perform
 experiments on all ontologies with zero-shot prompts and few-shot prompts. For
 few-shot prompts, we experiment with providing different numbers of examples
 ranging from 1 to 10. The provided examples are selected randomly from the
