--- a/main.tex
+++ b/main.tex
@@ -795,14 +795,13 @@ concepts with the highest number of individuals, ensuring each example is
 taken from a different concept.
 
 \subsubsection{Domain Context:}
-We experiment with four types of domain
-contextualization: 1) \textbf{Generic}: The LLM is only asked to perform a
-generic task e.g. ranked retrieval.  2) \textbf{Ontology}: The LLM is defined
-as an expert in ontologies.  3) \textbf{Topic} of an ontology: The LLM is
-defined as an expert in the topic of an ontology
-e.g. \verb|`You are a wine expert'| for the Wines Ontology
-\cite{noy2001OntologyDevelopment101} 4) \textbf{Ontology and Topic}: The LLM
-is defined as an expert in ontologies and an expert in the
+We experiment with four types of domain contextualization: 1)
+\textbf{Generic}: The LLM is only asked to perform a generic task e.g. ranked
+retrieval.  2) \textbf{Ontology}: The LLM is defined as an expert in
+ontologies.  3) \textbf{Topic} of an ontology: The LLM is defined as an expert
+in the topic of an ontology e.g. \verb|`You are a wine expert'| for the Wines
+Ontology \cite{noy2001OntologyDevelopment101} 4) \textbf{Ontology and Topic}:
+The LLM is defined as an expert in ontologies and an expert in the
 topic.\footnote{Examples of the prompt templates can be found at our
   \href{https://anonymous.4open.science/r/llm_ontology_awareness-91C4/}{repository}.}
 
