--- a/main.tex
+++ b/main.tex
@@ -807,7 +807,7 @@ topic.\footnote{Examples of the prompt templates can be found at our
 
 % Temperature variability and response consistency
 
-\subsubsection{Response variation:}
+\subsubsection{Response Variation:}
 To evaluate response consistency over temperature variation, we repeat 3-shot,
 ontology contextualization experiments on the Wines and CASE ontologies with
 GPT-4o and Llama3-8B 10 times at three temperature values.
