--- a/main.tex
+++ b/main.tex
@@ -808,6 +808,10 @@ topic.\footnote{Examples of the prompt templates can be found at our
 % Temperature variability and response consistency
 
 \subsubsection{Response Variation:}
+
+We evaluate response variation in terms of statistical consistency at
+different temperature settings under specific values of different factors.
+
 To evaluate response consistency over temperature variation, we repeat 3-shot,
 ontology contextualization experiments on the Wines and CASE ontologies with
 GPT-4o and Llama3-8B 10 times at three temperature values.
