--- a/main.tex
+++ b/main.tex
@@ -811,6 +811,9 @@ topic.\footnote{Examples of the prompt templates can be found at our
 
 We evaluate response variation in terms of statistical consistency at
 different temperature settings under specific values of different factors.
+Our approach involves statistical consistency evaluation of the LLM responses
+in terms of mAP at three temperature values: low (0.2), default (0.5/0.6) and
+high (0.8)
 
 To evaluate response consistency over temperature variation, we repeat 3-shot,
 ontology contextualization experiments on the Wines and CASE ontologies with
