--- a/main.tex
+++ b/main.tex
@@ -812,8 +812,10 @@ topic.\footnote{Examples of the prompt templates can be found at our
 We evaluate response variation in terms of statistical consistency at
 different temperature settings under specific values of different factors.
 Our approach involves statistical consistency evaluation of the LLM responses
-in terms of mAP at three temperature values: low (0.2), default (0.5/0.6) and
-high (0.8)
+in terms of mAP at several temperature values: 0.0, 0.2, 0.4, 0.6, 0.8,
+1.0. Statistical consistency is measured across 10 repetitions at each
+temperature value.
+
 
 To evaluate response consistency over temperature variation, we repeat 3-shot,
 ontology contextualization experiments on the Wines and CASE ontologies with
