--- a/main.tex
+++ b/main.tex
@@ -815,8 +815,8 @@ Our approach involves statistical consistency evaluation of the LLM responses
 in terms of mAP at several temperature values: 0.0, 0.2, 0.4, 0.6, 0.8,
 1.0. Statistical consistency is measured across 10 repetitions at each
 temperature value. Lower temperature values (< 0.5) highlight performance
-variation at low response variability while higher values (\geq 0.5) illustrate
-performance variation when response variation is encouraged.
+variation at low response variability while higher values ($\geq$ 0.5)
+illustrate performance variation when response variation is encouraged.
 
 % Due to resource restrictions, we were unable to perform similar experiments
 % with o1-preview and DeepSeek R1-Distil-Llama-8B and leave it for future
