--- a/main.tex
+++ b/main.tex
@@ -839,7 +839,7 @@ illustrate performance variation when response variation is encouraged.
 
 \section{Results and Discussion}
 \label{sec:results}
-This section present the results and observations across the 288 conducted
+This section presents the results and observations across the 288 conducted
 experiments (zero-shot: 4 LLMs $\times$ 3 ontologies $\times$ 4 domain
 contextualizations $= 48$; few-shot: 2 LLMs $\times$ 3 ontologies $\times$ 4
 domain contextualizations $\times$ 10 few-shot variations $= 240$). Due to the
