--- a/main.tex
+++ b/main.tex
@@ -842,7 +842,7 @@ illustrate performance variation when response variation is encouraged.
 This section presents the results and observations across the 288 conducted
 experiments (zero-shot: 4 LLMs $\times$ 3 ontologies $\times$ 4 domain
 contextualizations $= 48$; few-shot: 2 LLMs $\times$ 3 ontologies $\times$ 4
-domain contextualizations $\times$ 10 few-shot variations $= 240$). Due to the
+domain contextualizations $\times$ 10 few-shot variations $= 240$). Due to
 space limitations, we are unable to report all the computed scores here. A
 complete table with all the results and figures can be found
 \href{https://anonymous.4open.science/r/llm_ontology_awareness-91C4/}{online}
