--- a/main.tex
+++ b/main.tex
@@ -858,8 +858,9 @@ representing a small portion of the total experiments performed, it still
 highlights the nature of the observed trends that we observe across all
 variables.
 % and the observed trends across all other variables also being evident.
-However, when analyzing any factor, we do not confine ourselves to a single
-value for any other variable to be as general as possible.
+However, when analyzing any factor, we draw conclusions with respect to
+$\text{mAP@D}$ and do not confine ourselves to a single value for any other
+variable to be as general as possible.
 
 When analyzing the effect of different variables, we draw our conclusions with
 an emphasis on $\text{mAP@D}$ rather than $\text{mAP@1}$. $\text{mAP@1}$
