--- a/main.tex
+++ b/main.tex
@@ -862,17 +862,17 @@ However, when analyzing any factor, we draw conclusions with respect to
 $\text{mAP@D}$ and do not confine ourselves to a single value for any other
 variable to be as general as possible.
 
-When analyzing the effect of different variables, we draw our conclusions with
-an emphasis on $\text{mAP@D}$ rather than $\text{mAP@1}$. $\text{mAP@1}$
-focuses only on the ability of an LLM in identifying the directly-asserted
-concept of an individual. However, as discussed in Section
-\ref{subsec:method-ontology-variability}, a large portion of the individuals
-use the label of their directly-asserted concept for their respective
-labels. Such lexical similarity would inflate $\text{mAP@1}$ scores and
-provide an inaccurate representation of the understanding LLMs possess of
-ontologies. $\text{mAP@D}$, in contrast, reduces the emphasis on the
-directly-asserted concept and, by requiring LLMs to generate hierarchies,
-provides greater insight into their understanding of concept hierarchies.
+% When analyzing the effect of different variables, we draw our conclusions with
+% an emphasis on $\text{mAP@D}$ rather than $\text{mAP@1}$. $\text{mAP@1}$
+% focuses only on the ability of an LLM in identifying the directly-asserted
+% concept of an individual. However, as discussed in Section
+% \ref{subsec:method-ontology-variability}, a large portion of the individuals
+% use the label of their directly-asserted concept for their respective
+% labels. Such lexical similarity would inflate $\text{mAP@1}$ scores and
+% provide an inaccurate representation of the understanding LLMs possess of
+% ontologies. $\text{mAP@D}$, in contrast, reduces the emphasis on the
+% directly-asserted concept and, by requiring LLMs to generate hierarchies,
+% provides greater insight into their understanding of concept hierarchies.
 
 \subsection{Analysis of Ontology Factors}
 \label{subsec:results-ontology-variability}
