--- a/main.tex
+++ b/main.tex
@@ -874,6 +874,8 @@ variable to be as general as possible.
 % directly-asserted concept and, by requiring LLMs to generate hierarchies,
 % provides greater insight into their understanding of concept hierarchies.
 
+% General Results
+
 \subsection{Analysis of Ontology Factors}
 \label{subsec:results-ontology-variability}
 
