--- a/main.tex
+++ b/main.tex
@@ -874,7 +874,7 @@ variable to be as general as possible.
 % directly-asserted concept and, by requiring LLMs to generate hierarchies,
 % provides greater insight into their understanding of concept hierarchies.
 
-% General Results
+\subsection{Ontology Population Performance}
 
 \subsection{Analysis of Ontology Factors}
 \label{subsec:results-ontology-variability}
