--- a/main.tex
+++ b/main.tex
@@ -795,9 +795,12 @@ concepts with the highest number of individuals, ensuring each example is
 taken from a different concept.
 
 \subsubsection{Domain Context:}
-We experiment with four types of domain contextualization: 1) Generic: The LLM
-is only asked to perform a generic task e.g. ranked retrieval.  2) Ontology:
-The LLM is defined as an expert in ontologies.  3) Topic of an ontology: The
+We experiment with four types of domain contextualization:
+\begin{itemize}
+\item Generic: The LLM is only asked to perform a generic task e.g. ranked
+  retrieval.
+\item Ontology: The LLM is defined as an expert in ontologies.
+\end{itemize}   3) Topic of an ontology: The
 LLM is defined as an expert in the topic of an ontology
 e.g. \verb|`You are a wine expert'| for the Wines Ontology
 \cite{noy2001OntologyDevelopment101} 4) Ontology and Topic: The LLM is defined
