--- a/main.tex
+++ b/main.tex
@@ -800,10 +800,10 @@ We experiment with four types of domain contextualization:
 \item Generic: The LLM is only asked to perform a generic task e.g. ranked
   retrieval.
 \item Ontology: The LLM is defined as an expert in ontologies.
-\end{itemize}   3) Topic of an ontology: The
-LLM is defined as an expert in the topic of an ontology
-e.g. \verb|`You are a wine expert'| for the Wines Ontology
-\cite{noy2001OntologyDevelopment101} 4) Ontology and Topic: The LLM is defined
+\item Topic of an ontology: The LLM is defined as an expert in the topic of an
+  ontology e.g. \verb|`You are a wine expert'| for the Wines Ontology
+  \cite{noy2001OntologyDevelopment101}
+\end{itemize}   4) Ontology and Topic: The LLM is defined
 as an expert in ontologies and an expert in the topic.\footnote{Examples of
   the prompt templates can be found at our
   \href{https://anonymous.4open.science/r/llm_ontology_awareness-91C4/}{repository}.}
