--- a/main.tex
+++ b/main.tex
@@ -802,9 +802,10 @@ We experiment with four types of domain contextualization:
 \item Ontology: The LLM is defined as an expert in ontologies.
 \item Topic of an ontology: The LLM is defined as an expert in the topic of an
   ontology e.g. \verb|`You are a wine expert'| for the Wines Ontology
-  \cite{noy2001OntologyDevelopment101}
-\end{itemize}   4) Ontology and Topic: The LLM is defined
-as an expert in ontologies and an expert in the topic.\footnote{Examples of
+  \cite{noy2001OntologyDevelopment101}.
+\item Ontology and Topic: The LLM is defined as an expert in ontologies and an
+  expert in the topic.
+\end{itemize}   \footnote{Examples of
   the prompt templates can be found at our
   \href{https://anonymous.4open.science/r/llm_ontology_awareness-91C4/}{repository}.}
 
