--- a/main.tex
+++ b/main.tex
@@ -805,9 +805,9 @@ We experiment with four types of domain contextualization:
   \cite{noy2001OntologyDevelopment101}.
 \item Ontology and Topic: The LLM is defined as an expert in ontologies and an
   expert in the topic.
-\end{itemize}   \footnote{Examples of
-  the prompt templates can be found at our
-  \href{https://anonymous.4open.science/r/llm_ontology_awareness-91C4/}{repository}.}
+\end{itemize}
+Examples of the prompt templates can be found at our
+\href{https://anonymous.4open.science/r/llm_ontology_awareness-91C4/}{repository}.}
 
 % Temperature variability and response consistency
 
