--- a/main.tex
+++ b/main.tex
@@ -806,7 +806,8 @@ We experiment with four types of domain contextualization:
 \item Ontology and Topic: The LLM is defined as an expert in ontologies and an
   expert in the topic.
 \end{itemize}
-Examples of the prompt templates can be found at our
+Examples of the templates for different prompting approaches and domain
+contextualization variations can be found at our
 \href{https://anonymous.4open.science/r/llm_ontology_awareness-91C4/}{repository}.}
 
 % Temperature variability and response consistency
