--- a/main.tex
+++ b/main.tex
@@ -881,6 +881,9 @@ variable to be as general as possible.
 
 \subsection{Ontology Population Performance}
 
+Table \ref{tab:results} provides a macroscopic overview of LLM-supported
+ontology population performance.
+
 \begin{table}
   \centering
   \caption{Ontology domain contextualization prediction results at zero-shot,
