--- a/main.tex
+++ b/main.tex
@@ -882,7 +882,8 @@ variable to be as general as possible.
 \subsection{Ontology Population Performance}
 
 Table \ref{tab:results} provides a macroscopic overview of LLM-supported
-ontology population performance.
+ontology population performance. LLMs are reasonably capable of performing
+ontology population with larger models outperforming smaller 
 
 \begin{table}
   \centering
