--- a/main.tex
+++ b/main.tex
@@ -883,7 +883,7 @@ variable to be as general as possible.
 
 Table \ref{tab:results} provides a macroscopic overview of LLM-supported
 ontology population performance. LLMs are reasonably capable of performing
-ontology population with larger models outperforming smaller 
+ontology population with larger models outperforming smaller ones.
 
 \begin{table}
   \centering
