--- a/main.tex
+++ b/main.tex
@@ -883,7 +883,8 @@ variable to be as general as possible.
 
 Table \ref{tab:results} provides a macroscopic overview of LLM-supported
 ontology population performance. LLMs are reasonably capable of performing
-ontology population with larger models outperforming smaller ones.
+ontology population with larger models outperforming smaller
+ones. $\text{mAP@D}$ performance drops significantly 
 
 \begin{table}
   \centering
