--- a/main.tex
+++ b/main.tex
@@ -884,7 +884,9 @@ variable to be as general as possible.
 Table \ref{tab:results} provides a macroscopic overview of LLM-supported
 ontology population performance. LLMs are reasonably capable of performing
 ontology population with larger models outperforming smaller
-ones. $\text{mAP@D}$ performance drops significantly 
+ones. $\text{mAP@D}$ performance drops significantly for the CASE and
+Astronomy ontologies in the zero-shot setting compared to $\text{mAP@1}$ but
+few-shot context examples largely help alleviate the issue. 
 
 \begin{table}
   \centering
