--- a/main.tex
+++ b/main.tex
@@ -808,7 +808,7 @@ We experiment with four types of domain contextualization:
 \end{itemize}
 Examples of the templates for different prompting approaches and domain
 contextualization variations can be found at our
-\href{https://anonymous.4open.science/r/llm_ontology_awareness-91C4/}{repository}.}
+\href{https://anonymous.4open.science/r/llm_ontology_awareness-91C4/}{repository}.
 
 % Temperature variability and response consistency
 
