--- a/main.tex
+++ b/main.tex
@@ -879,14 +879,14 @@ variable to be as general as possible.
 % directly-asserted concept and, by requiring LLMs to generate hierarchies,
 % provides greater insight into their understanding of concept hierarchies.
 
-\subsection{Ontology Population Performance}
+% \subsection{Ontology Population Performance}
 
-Table \ref{tab:results} provides a macroscopic overview of LLM-supported
-ontology population performance. LLMs are reasonably capable of performing
-ontology population with larger models outperforming smaller
-ones. $\text{mAP@D}$ performance drops significantly for the CASE and
-Astronomy ontologies in the zero-shot setting compared to $\text{mAP@1}$ but
-few-shot context examples largely help alleviate the issue. 
+A macroscopic overview of performance shows that LLMs are quite capable of
+performing ontology population when provided with simple labels.  Larger
+and/or commercial models outperforming smaller LLMs. $\text{mAP@D}$
+performance drops significantly for the CASE and Astronomy ontologies in the
+zero-shot setting compared to $\text{mAP@1}$ but few-shot context examples
+largely help alleviate the issue.
 
 \begin{table}
   \centering
