--- a/main.tex
+++ b/main.tex
@@ -879,8 +879,7 @@ variable to be as general as possible.
 % directly-asserted concept and, by requiring LLMs to generate hierarchies,
 % provides greater insight into their understanding of concept hierarchies.
 
-% \subsection{Ontology Population Performance}
-
+% Macro performance
 A macroscopic overview of performance shows that LLMs are quite capable of
 performing ontology population when provided with simple labels.  Larger
 and/or commercial models outperforming smaller LLMs. $\text{mAP@D}$
