--- a/main.tex
+++ b/main.tex
@@ -882,7 +882,7 @@ variable to be as general as possible.
 % Macro performance
 A macroscopic overview of performance shows that LLMs are quite capable of
 performing ontology population when provided with simple labels.  Larger
-and/or commercial models outperforming smaller LLMs. $\text{mAP@D}$
+and/or commercial models outperform smaller LLMs. $\text{mAP@D}$
 performance drops significantly for the CASE and Astronomy ontologies in the
 zero-shot setting compared to $\text{mAP@1}$ but few-shot context examples
 largely help alleviate the issue.
