--- a/main.tex
+++ b/main.tex
@@ -884,7 +884,9 @@ A macroscopic overview of performance shows that LLMs are quite capable of
 performing ontology population when provided with simple labels. LLMs struggle
 with zero-shot hierarchy retrieval-based ontology population ($\text{mAP@D}$)
 for the CASE and Astronomy ontologies but few-shot context examples largely
-help alleviate the issue. 
+help alleviate the issue. The performance differences between the three
+ontologies highlight the importance of the domain of the ontologies even on a
+simple ontology learning task such as ontology population.
 
 \begin{table}
   \centering
