--- a/main.tex
+++ b/main.tex
@@ -886,7 +886,9 @@ with zero-shot hierarchy retrieval-based ontology population ($\text{mAP@D}$)
 for the CASE and Astronomy ontologies but few-shot context examples largely
 help alleviate the issue. The performance differences between the three
 ontologies highlight the importance of the domain of the ontologies even on a
-simple ontology learning task such as ontology population.
+simple ontology learning task such as ontology population. In the subsequent
+sections, we explore the effects of the outlined Ontology and LLM Factors in
+our experimentation.
 
 \begin{table}
   \centering
