--- a/main.tex
+++ b/main.tex
@@ -983,6 +983,12 @@ our experimentation.
 \subsection{Analysis of Ontology Factors}
 \label{subsec:results-ontology-variability}
 
+% Structure
+
+% Entity Labels
+
+% Taxonomy
+
 For each ontology, measuring the centroid distance between the embeddings of
 its concepts and individuals provides the first indication of semantic
 separation between the two types of entities. Table \ref{tab:ontology-metrics}
