--- a/main.tex
+++ b/main.tex
@@ -983,7 +983,7 @@ our experimentation.
 \subsection{Analysis of Ontology Factors}
 \label{subsec:results-ontology-variability}
 
-% Structure
+% Strucure
 
 % Entity Labels
 
