--- a/main.tex
+++ b/main.tex
@@ -984,6 +984,21 @@ our experimentation.
 \label{subsec:results-ontology-variability}
 
 % Strucure
+Depth
+Wines Ontology
+t(18) = 6.6, p <.001
+CASE Ontology
+t(18) = 6.6, p <.001
+Astronomy
+t(18) = 6.6, p <.001
+
+Dispersion
+Wines Ontology
+t(18) = 6.6, p <.001
+CASE Ontology
+t(18) = 6.6, p <.001
+Astronomy
+t(18) = 6.6, p <.001
 
 % Entity Labels
 
