--- a/main.tex
+++ b/main.tex
@@ -986,19 +986,19 @@ our experimentation.
 % Strucure
 Depth
 Wines Ontology
-t(18) = 6.6, p <.001
+t(94) = 6.6, p <.001
 CASE Ontology
-t(18) = 6.6, p <.001
+t(94) = 6.6, p <.001
 Astronomy
-t(18) = 6.6, p <.001
+t(94) = 6.6, p <.001
 
 Dispersion
-Wines Ontology
-t(18) = 6.6, p <.001
-CASE Ontology
-t(18) = 6.6, p <.001
+Wines
+t(94) = -0.30 , p < .05
 Astronomy
-t(18) = 6.6, p <.001
+t(94) = -0.17 , p = 0.09
+CASE
+t(94) = -0.13, p = 0.21
 
 % Entity Labels
 
@@ -1278,8 +1278,7 @@ $mAP@D$ score under default temperature conditions (M = 0.88, SD = 0.01) than
 under the high temperature setting (M = 0.85, SD = 0.01), t(18) = 6.6, p <
 .001. In a similar fashion, for the CASE ontology, the default temperature
 resulted in a significantly higher average $mAP@D$ score as well (M = 0.76, SD
-= 0.01) compared to the higher temperature (M = 0.71, SD = 0.01), t(18) = 9.8,
-p < .001. Although the same trend is observable for Llama3-8B, the much higher
+= 0.01) compared to the higher temperature (M = 0.71, SD = 0.01), t(18) = 9.8,p < .001. Although the same trend is observable for Llama3-8B, the much higher
 variance of the smaller LLM's results renders the test non-significant.
 
 \section{Conclusion}
