--- a/main.tex
+++ b/main.tex
@@ -985,12 +985,12 @@ our experimentation.
 
 % Strucure
 Depth
-Wines Ontology
-t(94) = 6.6, p <.001
-CASE Ontology
-t(94) = 6.6, p <.001
+Wines
+t(94) = -0.24, p = 0.01
 Astronomy
-t(94) = 6.6, p <.001
+t(94) = 0.03, p = 0.76
+CASE
+t(94) = 0.11 , p = 0.27
 
 Dispersion
 Wines
