--- a/main.tex
+++ b/main.tex
@@ -617,23 +617,24 @@ parentage.
 Table \ref{tab:ontology-structure-metrics} provides an overview of the
 structural metrics of the three ontologies.  In terms of size, the Astronomy
 Ontology has a significantly larger number of concepts. In contrast, the
-smallest ontology: Wines, has the largest number of individuals.  The
-Astronomy Ontology has the largest breadth
-\cite{gangemi2005OntologyEvaluationValidation} which is an indicator of the
-diverseness of its domain. The CASE Ontology is characterized by larger
-maximum dispersion \cite{gangemi2005OntologyEvaluationValidation},
-highlighting the existence of a large variety of sibling concepts of similar
-granularity of the domain. The structural differences between the three
-ontologies can help identify the macroscopic structural design implications on
-ontology population. Greater depth signifies higher information granularity
-that can pose challenges of semantic separation between deeper entities and
-their parents. Broader ontologies exhibit greater information diversity that
-can confuse LLMs about the relevant domain of entities. Dispersion evaluates
-semantic separability as well for closely related sibling entities. We
-investigate correlations between LLM-supported ontology population performance
-and structure. In particular, we investigate if deeper, broader or dispersed
-ontologies (and concepts) represent more complex situations for LLMs to
-perform ontology population.
+smallest ontology: Wines, has the largest number of individuals.
+% The Astronomy Ontology has the largest breadth
+% \cite{gangemi2005OntologyEvaluationValidation} which is an indicator of the
+% diverseness of its domain.
+The CASE Ontology is characterized by larger maximum dispersion
+\cite{gangemi2005OntologyEvaluationValidation}, highlighting the existence of
+a large variety of sibling concepts of similar granularity of the domain. The
+structural differences between the three ontologies can help identify the
+macroscopic structural design implications on ontology population. Greater
+depth signifies higher information granularity that can pose challenges of
+semantic separation between deeper entities and their parents.
+% Broader ontologies exhibit greater information diversity that can confuse
+% LLMs about the relevant domain of entities.
+Dispersion evaluates semantic separability as well for closely related sibling
+entities. We investigate correlations between LLM-supported ontology
+population performance and structure. In particular, we investigate if deeper,
+broader or dispersed ontologies (and concepts) represent more complex
+situations for LLMs to perform ontology population.
 
 % The three ontologies represent a very small, a medium and a relatively large
 % ontology to test for ontology population. However, in compared to larger
