--- a/main.tex
+++ b/main.tex
@@ -630,7 +630,7 @@ depth signifies higher information granularity that can pose challenges of
 semantic separation between deeper entities and their parents.
 % Broader ontologies exhibit greater information diversity that can confuse
 % LLMs about the relevant domain of entities.
-Dispersion evaluates semantic separability as well for closely related sibling
+Dispersion evaluates semantic separability for closely related sibling
 entities. We investigate correlations between LLM-supported ontology
 population performance and structure. In particular, we investigate if deeper,
 broader or dispersed ontologies (and concepts) represent more complex
