--- a/main.tex
+++ b/main.tex
@@ -632,10 +632,10 @@ semantic separation between deeper entities and their parents.
 % LLMs about the relevant domain of entities.
 Dispersion evaluates semantic separability for closely related sibling
 entities. We investigate correlations between LLM-supported ontology
-population performance and structure. In particular, we investigate if deeper,
-broader or dispersed ontologies (and concepts) represent more complex
-situations for LLMs to perform ontology population.
-
+population performance and dispersion and depth of concepts in all three
+ontologies. In particular, we investigate if concepts of greater depth or with
+a larger number of child concepts are more difficult for LLMs to make accurate
+predictions for.
 % The three ontologies represent a very small, a medium and a relatively large
 % ontology to test for ontology population. However, in compared to larger
 % ontologies like DBPedia \cite{auer2007DbpediaNucleusWeb}, all three are
