--- a/main.tex
+++ b/main.tex
@@ -984,6 +984,17 @@ our experimentation.
 \subsection{Analysis of Ontology Factors}
 \label{subsec:results-ontology-variability}
 
+\subsubsection{Structure:}
+To investigate the influence of structure, we perform a correlation study
+between the ability of LLMs to place concepts at the correct position in their
+hierarchy during retrieval and ontology population performance.
+
+We compute Correct Retrieval (CR) of a concept $c_i$ as the
+
+\begin{equation}
+  CR(c) = \frac{1}{|{t \in T; c \in \{y_i}_{i=1}^{d}|}
+\end{equation}
+
 % Strucure
 Depth
 Wines
