--- a/main.tex
+++ b/main.tex
@@ -992,7 +992,7 @@ hierarchy during retrieval and ontology population performance.
 We compute Correct Retrieval (CR) of a concept $c_i$ as the
 
 \begin{equation}
-  CR(c) = \frac{1}{|\{t \in T; c \in \{y_i}_{i=1}^{d}\}|}
+  CR(c) = \frac{1}{|\{t \in T; c \in \{y_i\}_{i=1}^{d}\}|}
 \end{equation}
 
 % Strucure
