--- a/main.tex
+++ b/main.tex
@@ -989,7 +989,9 @@ To investigate the influence of structure, we perform a correlation study
 between the ability of LLMs to place concepts at the correct position in their
 hierarchy during retrieval and ontology population performance.
 
-We compute Correct Retrieval (CR) of a concept $c_i$ as the
+We compute Correct Retrieval (CR) of a concept $c$ at depth $d$ in an ontology
+$O$ of depth $D$ as the percentage of predictions of the concept at the
+correct across all individual terms $t \in T$ associated with that concept.
 
 \begin{equation}
   CR(c) = \frac{\big|\{t \in T; c \in \{y_i\}_{i=1}^{D}; y_d = c\}\big|}{\big|\{t \in T; c \in \{y_i\}_{i=1}^{D}\}\big|}
