--- a/main.tex
+++ b/main.tex
@@ -751,7 +751,8 @@ $\text{mAP@D}$ respectively.
 Let the ground truth hierarchy for an individual $t$ be given by:
 \begin{equation}
   \label{eq:ground-truth}
-  \{c_i \mid c_i \in C\ ;\ c_i \subseteq c_{i+1}\ ;\ t \in \Sigma_{c_1}\ ;\ 1 \leq i \leq d \}
+  \{c_i \mid c_i \in C\ ;\ c_i \subseteq c_{i+1}\ ;\ t \in \Sigma_{c_1}\ ;\ 1
+  \leq i \leq D - d \}
 \end{equation}
 where $d$ is the depth of the directly-asserted concept $c_1$ and $d \leq D$ \\
 Let $\{y_i\}_{i=1}^{d}$ be the predicted hierarchy for $t$ \\
