--- a/main.tex
+++ b/main.tex
@@ -567,7 +567,7 @@ entities themselves.
   Let $t$ be a term to be mapped as an individual to a concept in $C$ \newline
   Then the task of ontology population is:
   \begin{equation}
-    f(t;O)^{Ontology}_{Population} =\ \{c_i \mid c_i \in C\ ;\ c_i \subseteq c_{i+1}\ ;\ t \in \Sigma_{c_d}\ ;\ d \leq i \leq D \}
+    f(t;O)^{Ontology}_{Population} =\ \{c_i \mid c_i \in C\ ;\ c_i \subseteq c_{i+1}\ ;\ t \in \Sigma_{c_1}\ ;\ 1 \leq i \leq d \}
   \end{equation}
   where, \newline $d$ is an integer value equal to the depth of the concept
   $c_1$ in $O$ \newline $\subseteq$ denotes the `subclass of' or `is a'
