--- a/main.tex
+++ b/main.tex
@@ -570,8 +570,7 @@ entities themselves.
     f(t;O)^{Ontology}_{Population} =\ \{c_i \mid c_i \in C\ ;\ c_i \subseteq
     c_{i+1}\ ;\ t \in \Sigma_{c_0}\ ;\ 0 \leq i \leq D - d \}
   \end{equation}
-  where, \newline $D$ is the depth of the ontology $O$ \newline $d$ is an
-  integer value equal to the depth of the concept $c_1$ in $O$ \newline
+  where, \newline $D$ is the depth of the ontology $O$ \newline $d$ is the depth of the concept $c_0$ in $O$ \newline
   $\subseteq$ denotes the `subclass of' or `is a' relation (taxonomical
   relations of $O$ i.e. $H$); \newline $c_1$ is the directly asserted concept
   of the term $t$ and,\newline $\Sigma_{c_1}$ is the extension
