--- a/main.tex
+++ b/main.tex
@@ -570,11 +570,12 @@ entities themselves.
     f(t;O)^{Ontology}_{Population} =\ \{c_i \mid c_i \in C\ ;\ c_i \subseteq
     c_{i+1}\ ;\ t \in \Sigma_{c_0}\ ;\ 0 \leq i \leq D - d \}
   \end{equation}
-  where, \newline $D$ is the depth of the ontology $O$ \newline $d$ is the depth of the concept $c_0$ in $O$ \newline
+  where, \newline $D$ is the depth of the ontology $O$ \newline $d$ is the
+  depth of the concept $c_1$ in $O$ \newline
   $\subseteq$ denotes the `subclass of' or `is a' relation (taxonomical
-  relations of $O$ i.e. $H$); \newline $c_0$ is the directly asserted concept
+  relations of $O$ i.e. $H$); \newline $c_1$ is the directly asserted concept
   of the term $t$ and,\newline $\Sigma_{c_1}$ is the extension
-  \cite{hlomani2014ApproachesMethodsMetrics} of $c_0$ (i.e. set of asserted
+  \cite{hlomani2014ApproachesMethodsMetrics} of $c_1$ (i.e. set of asserted
   individuals) }
 \subsection{Ontology Factors}
 \label{subsec:experiment-ontology-factors}
