--- a/main.tex
+++ b/main.tex
@@ -568,7 +568,7 @@ entities themselves.
   Then the task of ontology population is:
   \begin{equation}
     f(t;O)^{Ontology}_{Population} =\ \{c_i \mid c_i \in C\ ;\ c_i \subseteq
-    c_{i+1}\ ;\ t \in \Sigma_{c_0}\ ;\ 0 \leq i \leq D - d \}
+    c_{i+1}\ ;\ t \in \Sigma_{c_1}\ ;\ 1 \leq i \leq D - d + 1\}
   \end{equation}
   where, \newline $D$ is the depth of the ontology $O$ \newline $d$ is the
   depth of the concept $c_1$ in $O$ \newline
