--- a/main.tex
+++ b/main.tex
@@ -756,7 +756,7 @@ Let the ground truth hierarchy for an individual $t$ be given by:
   \leq i \leq D - d + 1\}
 \end{equation}
 where $d$ is the depth of the directly-asserted concept $c_1$ and $d \leq D$ \\
-Let $\{y_i\}_{i=1}^{d}$ be the predicted hierarchy for $t$ \\
+Let $\{y_i\}_{i=1}^{D-d+1}$ be the predicted hierarchy for $t$ \\
 The mAP at a sequence length of $K$ is given by:
 \begin{equation}
   \label{eq:map}
