--- a/main.tex
+++ b/main.tex
@@ -996,7 +996,7 @@ $O$ of depth $D$ as the percentage of predictions of the concept at the
 correct across all individual terms $t \in T$ associated with that concept.
 
 \begin{equation}
-  CR(c) = \frac{\big|\{t \in T; c \in \{y_i\}_{i=1}^{D}; y_d = c\}\big|}{\big|\{t \in T; c \in \{y_i\}_{i=1}^{D}\}\big|}
+  CR(c) = \frac{\big|\{t \in T; c \in \{y_i\}_{i=1}^{D-d+1}; y_d = c\}\big|}{\big|\{t \in T; c \in \{y_i\}_{i=1}^{D}\}\big|}
 \end{equation}
 
 % Strucure
